# cn-pop

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
pre/: 2024-09-14T055338Z.midi  2024-09-14T055952Z.midi  2024-09-14T071507Z.midi  2024-09-14T072310Z.midi  2024-09-14T073308Z.midi  2024-09-15T064253Z.midi  2024-09-15T065323Z.midi  2024-09-15T065750Z.midi  2024-09-15T070406Z.midi  2024-09-15T070837Z.midi  2024-09-15T071325Z.midi  2024-09-15T071801Z.midi  2024-09-15T072245Z.midi  2024-09-15T072638Z.midi  2024-09-15T073155Z.midi  2024-09-15T073624Z.midi  2024-09-16T130218Z.midi  2024-09-16T130853Z.midi  2024-09-16T131308Z.midi  2024-09-16T131805Z.midi  2024-09-16T132240Z.midi  2024-09-16T132326Z.midi  2024-09-17T050231Z.midi  2024-09-17T050655Z.midi  2024-09-17T051243Z.midi  2024-09-23T081632Z.midi  2024-09-23T082116Z.midi  2024-09-23T082548Z.midi  2024-09-23T082948Z.midi  2024-09-23T083433Z.midi  2024-09-23T083848Z.midi  2024-09-23T084257Z.midi  2024-09-23T084807Z.midi  2024-09-23T085249Z.midi  2024-09-23T085749Z.midi  2024-09-23T090209Z.midi  2024-09-23T090755Z.midi  2024-09-23T091206Z.midi  2024-09-24T035817Z.midi  2024-09-24T040227Z.midi  (+46 more)
src/data/: midi_dataset.py
src/models/: music_rnn.py
src/utils/: midi_utils.py
