[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "music_gen_ai"
version = "0.1.0"
description = "An AI-powered music generation project"
authors = ["Alex Meng <tannal2409@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchaudio = "^0.9.0"
numpy = "^1.20.0"
pandas = "^1.2.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
librosa = "^0.8.0"
pretty_midi = "^0.2.9"
flask = "^2.0.0"
pyyaml = "^5.4.0"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.5b1"
flake8 = "^3.9"

[tool.black]
line-length = 100
target-version = ['py38']